--- a/productlist.html
+++ b/productlist.html
@@ -48,7 +48,7 @@
                   <span v-else>未啟用</span>
                 </td>
                 <td width="120">
-                  <button type="button" @click="getProduct(item.id)" class="btn btn-primary">查看細節</button>
+                  <button type="button" @click="getProduct(item)" class="btn btn-primary">查看細節</button>
                 </td>
               </tr>
             </tbody>
@@ -103,8 +103,10 @@
             method: 'post',
             url: `${url}api/user/check`,
           }).then(res => {
+            // 若為登入狀態，則顯示產品列表
             this.getProductsList()
           }).catch(err => {
+            // 若登入失敗，則回到登入頁面
             alert(err.response.data.message)
             document.location.href = 'index.html';
           })
@@ -112,27 +114,22 @@
         getProductsList() {
           axios({
             method: 'get',
-            url: `${url}api/${api_path}/products/all`,
+            url: `${url}api/${api_path}/admin/products/all`,
           }).then(res => {
             this.productsList = res.data.products
           }).catch(err => {
             alert(error.response.data);
           })
         },
-        getProduct(id) {
-          axios({
-            method: 'get',
-            url: `${url}api/${api_path}/product/${id}`
-          }).then(res => {
-            this.product = res.data.product
-          }).catch(err => {
-            alert(error.response.data);
-          })
+        getProduct(item) {
+          this.product = item
         }
       },
       mounted() {
+        // 存取token
         const token = document.cookie.replace(/(?:(?:^|.*;\s*)myToken\s*=\s*([^;]*).*$)|^.*$/, '$1');
         axios.defaults.headers.common.Authorization = token;
+        // 進來頁面先確認是否為登入狀態
         this.checkLogin()
       }
     }
