update login error catch

--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
             alert(res.data.message)
             document.location.href = "./productlist.html";
           }).catch(err => {
-            console.log(err);
-            // alert(err.data.message)
+            alert(err.data.message)
           })
         }
       }
